--- a/extension/index.html
+++ b/extension/index.html
@@ -15,36 +15,7 @@
     <link href="main.css" media="all" rel="stylesheet" />
   </head>
   <body>
-    <!--<img src="cryptic1.png"/>-->
+    <img src="cryptic1.png"/>
     <script src="index.js"></script>
-    <script type="text/javascript">
-      // var dragging = false;
-      // var box = document.getElementById('wrapper')
-      // var x = 0
-      // var y = 0
-      // document.body.addEventListener('mousedown', (e) => {
-      //   e.preventDefault()
-      //   dragging = true
-      //   console.log(e)
-      //   x = e.clientX
-      //   y = e.clientY
-      //   box.style.left = `${x}px`
-      //   box.style.top = `${y}px`
-      //   box.style.width = `0px`
-      //   box.style.height = `0px`
-      // })
-      // document.body.addEventListener('mousemove', (e) => {
-      //   e.preventDefault()
-      //   //console.log(e)
-      //   if (dragging) {
-      //     box.style.width = `${e.clientX - x}px`
-      //     box.style.height = `${e.clientY - y}px`
-      //   }
-      // })
-      // document.body.addEventListener('mouseup', (e) => {
-      //   e.preventDefault()
-      //   dragging = false
-      // })
-    </script>
   </body>
 </html>
