Fixed invocation, cleaned up repo

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         position: absolute;
       }
     </style>
-    <link href="main.css" media="all" rel="stylesheet" />
+    <link href="extension/main.css" media="all" rel="stylesheet" />
   </head>
   <body>
     <img src="cryptic1.png"/>
-    <script src="index.js"></script>
+    <script src="extension/index.js"></script>
   </body>
 </html>
